# uigen

./: .gitignore  CLAUDE.md
.claude/: settings.local.json
.claude/hooks/: session-start.sh
eqms/: .gitignore  README.md  eqms.spec  pyproject.toml  requirements.txt  run_eqms.py
eqms/docs/: ADMIN_MANUAL.md  ARCHITECTURE.md  PACKAGING.md  USER_MANUAL.md
eqms/scripts/: build.bat  build.py
eqms/src/eqms/: __init__.py  __main__.py  config.py
eqms/src/eqms/auth/: __init__.py  ms_auth.py  session.py
eqms/src/eqms/core/: __init__.py  exceptions.py  logging_config.py  models.py  retry.py  utils.py
eqms/src/eqms/data/: __init__.py  archive.py  audit_repository.py  defaults.py  local_cache.py  logs_store.py  masterlist.py  masterlist_import.py  settings_store.py
eqms/src/eqms/resources/: README.md
eqms/src/eqms/services/: __init__.py  audit_service.py  backup_service.py  context.py  dashboard_service.py  email_service.py  report_service.py  update_service.py
eqms/src/eqms/sharepoint/: __init__.py  base.py  excel_io.py  factory.py  local_store.py  sharepoint_store.py
eqms/src/eqms/ui/: __init__.py  admin_view.py  app.py  audit_form_view.py  audit_history_view.py  concurrency.py  dashboard_view.py  login_view.py  main_window.py  reports_view.py  theme.py
eqms/src/eqms/ui/widgets/: __init__.py  autocomplete.py  chart.py  kpi_card.py  toast.py
eqms/tests/: conftest.py  test_auth.py  test_authorization.py  test_concurrency.py  test_core.py  test_data.py  test_masterlist_import.py  test_services.py
ran-bot/: README.md  main.py  requirements.txt
(+9 files in other folders)
